--- a/qubit_simulation_analysis.ipynb
+++ b/qubit_simulation_analysis.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ab6d6dd5",
    "metadata": {},
    "outputs": [
@@ -96,9 +96,10 @@
    ],
    "source": [
     "# Parameters for a single trajectory\n",
-    "N = 2000\n",
-    "epsilon = 0.05\n",
-    "\n",
+    "N = 10000\n",
+    "epsilon = 0.01\n",
+    "theta = N*epsilon**2\n",
+    "print(theta)\n",
     "# Run the trajectory\n",
     "result = run_trajectory(N, epsilon)\n",
     "\n",
@@ -124,7 +125,8 @@
     "plt.show()\n",
     "\n",
     "# Display entropy production\n",
-    "result.Q"
+    "result.Q\n",
+    "print(f'theta = {theta}')"
    ]
   },
   {
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7807cf33",
    "metadata": {},
    "outputs": [
@@ -157,17 +159,18 @@
    ],
    "source": [
     "# Ensemble parameters\n",
-    "num_traj = 5000  # number of trajectories\n",
-    "N = 200         # number of measurements per trajectory\n",
-    "epsilon = 0.05  # measurement strength\n",
+    "num_traj = 350  # number of trajectories\n",
+    "N = 2000         # number of measurements per trajectory\n",
+    "epsilon = 0.1  # measurement strength\n",
     "\n",
     "# Simulate Q distribution\n",
-    "Q_vals = simulate_Q_distribution(num_traj, N, epsilon, seed=123)\n",
+    "Q_vals = simulate_Q_distribution(num_traj, N, epsilon, seed=23)\n",
     "\n",
     "# Compute basic statistics\n",
     "mean_Q = np.mean(Q_vals)\n",
     "std_Q = np.std(Q_vals)\n",
-    "print(f\"⟨Q⟩ = {mean_Q:.2f} ± {std_Q:.2f}\")"
+    "print(f'<Q> = {mean_Q} ± {std_Q}')\n",
+    "\n"
    ]
   },
   {
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "5304f080",
    "metadata": {},
    "outputs": [
@@ -200,12 +203,12 @@
    "source": [
     "# Fit the distribution to Eq.(14)\n",
     "theta_hat, theta_err = fit_eq14(Q_vals)\n",
-    "print(f'T/tau = {theta_hat:.2f} ± {theta_err:.2f}')"
+    "print(f'T/tau = {theta_hat} ± {theta_err}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "8659be04",
    "metadata": {},
    "outputs": [
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "f2a522f8",
    "metadata": {},
    "outputs": [
@@ -273,25 +276,74 @@
    ],
    "source": [
     "# Parameters for long-time simulation\n",
-    "N_long = 5000\n",
-    "num_long = 200\n",
-    "epsilon = 0.0005\n",
+    "N_trajectories = 10000\n",
+    "num_measurments = 1000\n",
+    "epsilon = 0.01\n",
+    "theta = num_measurments*epsilon**2\n",
     "\n",
-    "Q_long = simulate_Q_distribution(num_long, N_long, epsilon, seed=42)\n",
-    "theta_long, theta_long_err = fit_eq14(Q_long)\n",
+    "Q_long = simulate_Q_distribution(N_trajectories, num_measurments, epsilon,)\n",
     "\n",
-    "# Plot histogram and fit\n",
+    "print(f'derived theta = {theta}')\n",
+    "\n",
+    "mean_Q_long = np.mean(Q_long)\n",
+    "print(f\"<Q> = {mean_Q_long}\")\n",
+    "\n",
+    "# Plot histogram and graph\n",
     "plt.figure(figsize=(8, 4))\n",
-    "plt.hist(Q_long, bins=60, density=True, alpha=0.5, edgecolor=\"black\", label=\"Empirical\")\n",
-    "x = np.linspace(min(Q_long), max(Q_long), 400)\n",
-    "plt.plot(x, eq14_pdf(x, theta_long), label=f\"Eq.(14) fit (θ={theta_long:.2f})\", linewidth=2)\n",
+    "plt.hist(Q_long, bins='auto', density=True, alpha=0.5, edgecolor=\"black\", label=\"Empirical\")\n",
+    "\n",
+    "x = np.linspace(0.001, max(Q_long), 400)\n",
+    "plt.plot(x, eq14_pdf(x, theta), label=f\"Eq.(14) fit (θ={theta:.2f})\", linewidth=2)\n",
     "plt.xlabel(\"Entropy production Q\")\n",
     "plt.ylabel(\"Probability density\")\n",
-    "plt.title(f\"Long-time distribution of Q (N={N_long})\")\n",
+    "plt.title(f\"Long-time distribution of Q (Number of trajectories={N_trajectories})\")\n",
     "plt.legend()\n",
     "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6b3fac9",
+   "metadata": {},
+   "source": [
     "\n",
-    "print(f'T/tau = {theta_long:.2f} ± {theta_long_err:.2f}')"
+    "## Fit theta to mean Q\n",
+    "\n",
+    "We run the simulation with several diffrent epsilons and number of measurements, in order to simulate for diffrent thetas. we then take the mean Q of each simulation on fit it against the thetas.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "602f1194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epsilon_list = [0.01, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]\n",
+    "num_trajectories_list = [1000, 300, 500, 700, 1000, 1300, 1500, 1800, 2000, 2500]\n",
+    "num_trajectories = 10000\n",
+    "mean_Q , thetas = average_Q_vs_theta(num_trajectories, num_trajectories_list, epsilon_list)\n",
+    "\n",
+    "\n",
+    "# Fit a line: Q = m*thetas + b\n",
+    "coeffs = np.polyfit(thetas, mean_Q, deg=1)\n",
+    "m, b = coeffs\n",
+    "fit_line = np.polyval(coeffs, thetas)\n",
+    "\n",
+    "print(f\"Best-fit slope m = {m:.3f}, intercept b = {b:.3f}\")\n",
+    "\n",
+    "# Plot data and fit\n",
+    "plt.figure(figsize=(7,5))\n",
+    "plt.scatter(thetas, mean_Q, label=\"Simulation data\", color=\"blue\")\n",
+    "plt.plot(thetas, fit_line, label=f\"Fit: Q = {m:.2f} θ + {b:.2f}\", color=\"red\")\n",
+    "plt.xlabel(r\"$\\theta = T/\\tau$\")\n",
+    "plt.ylabel(r\"$\\langle Q \\rangle$\")\n",
+    "plt.title(\"Linear fit of ⟨Q⟩ vs θ\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
    ]
   },
   {
