Refactor simulations into quantum_measurements package

--- a/qubit_simulation_analysis.ipynb
+++ b/qubit_simulation_analysis.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "# Single Qubit Weak Measurement Simulation\n",
     "\n",
-    "This notebook illustrates a Monte–Carlo simulation of a single qubit\n",
+    "This notebook illustrates a Monte\u2013Carlo simulation of a single qubit\n",
     "undergoing repeated weak measurements. We implement the measurement\n",
     "protocol using diagonal Kraus operators and track the resulting\n",
     "stochastic evolution of the state as well as the entropy production\n",
     "quantity $Q$. The simulation is based on the measurement-only\n",
-    "dynamics discussed in Appendix A of Turkeshi et al. and compared\n",
+    "dynamics discussed in Appendix\u00a0A of Turkeshi et al. and compared\n",
     "to the distribution predicted in the Arrow of Time paper.\n"
    ]
   },
@@ -29,7 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Import simulation functions from our module\n",
-    "from qubit_measurement_simulation import (\n",
+    "from quantum_measurements.qubit_measurement_simulation import (\n",
     "    run_trajectory,\n",
     "    simulate_Q_distribution,\n",
     "    eq14_pdf,\n",
@@ -51,7 +51,7 @@
     "\n",
     "We simulate a single trajectory of $N$ weak measurements. Each measurement step\n",
     "has a random outcome $\\xi_i \\in \\{\\pm 1\\}$, drawn according to the Born\n",
-    "probabilities determined by the current state. The post–measurement state is\n",
+    "probabilities determined by the current state. The post\u2013measurement state is\n",
     "normalised and used to compute the expectation value $\\langle\\sigma_z\\rangle$.\n",
     "The cell below runs one trajectory and plots the expectation values and\n",
     "measurement outcomes as functions of the step index.\n"
@@ -106,11 +106,11 @@
     "# Plot expectation values before and after each measurement\n",
     "steps = np.arange(N)\n",
     "plt.figure(figsize=(8, 4))\n",
-    "plt.plot(steps, result.zs_before, label=\"⟨σ_z⟩ before\")\n",
-    "plt.plot(steps, result.zs_after, label=\"⟨σ_z⟩ after\", linestyle=\"--\")\n",
+    "plt.plot(steps, result.zs_before, label=\"\u27e8\u03c3_z\u27e9 before\")\n",
+    "plt.plot(steps, result.zs_after, label=\"\u27e8\u03c3_z\u27e9 after\", linestyle=\"--\")\n",
     "plt.xlabel(\"Measurement step\")\n",
-    "plt.ylabel(\"⟨σ_z⟩\")\n",
-    "plt.title(\"Evolution of σ_z expectation values (single trajectory)\")\n",
+    "plt.ylabel(\"\u27e8\u03c3_z\u27e9\")\n",
+    "plt.title(\"Evolution of \u03c3_z expectation values (single trajectory)\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -118,7 +118,7 @@
     "plt.figure(figsize=(8, 3))\n",
     "plt.scatter(steps, result.outcomes, s=10)\n",
     "plt.xlabel(\"Measurement step\")\n",
-    "plt.ylabel(\"Outcome ξ_i\")\n",
+    "plt.ylabel(\"Outcome \u03be_i\")\n",
     "plt.yticks([-1, 1], labels=[\"-1\",\"+1\"])\n",
     "plt.ylim(-1.2, 1.2)\n",
     "plt.title(\"Measurement outcomes (single trajectory)\")\n",
@@ -153,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⟨Q⟩ = 11.97 ± 13.57\n"
+      "\u27e8Q\u27e9 = 11.97 \u00b1 13.57\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
     "# Compute basic statistics\n",
     "mean_Q = np.mean(Q_vals)\n",
     "std_Q = np.std(Q_vals)\n",
-    "print(f'<Q> = {mean_Q} ± {std_Q}')\n",
+    "print(f'<Q> = {mean_Q} \u00b1 {std_Q}')\n",
     "\n"
    ]
   },
@@ -183,7 +183,7 @@
     "\n",
     "We now fit the empirical distribution to Eq.(14) from the Arrow of Time\n",
     "paper. The function $p(x;\\theta)$ is defined in the module. We use a\n",
-    "nonlinear least–squares fit to determine the best–fit value of $\\theta$.\n"
+    "nonlinear least\u2013squares fit to determine the best\u2013fit value of $\\theta$.\n"
    ]
   },
   {
@@ -196,14 +196,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T/tau = 2.31 ± 0.35\n"
+      "T/tau = 2.31 \u00b1 0.35\n"
      ]
     }
    ],
    "source": [
     "# Fit the distribution to Eq.(14)\n",
     "theta_hat, theta_err = fit_eq14(Q_vals)\n",
-    "print(f'T/tau = {theta_hat} ± {theta_err}')\n"
+    "print(f'T/tau = {theta_hat} \u00b1 {theta_err}')\n"
    ]
   },
   {
@@ -229,7 +229,7 @@
     "hist, bins, _ = plt.hist(Q_vals, bins=60, density=True, alpha=0.5, edgecolor=\"black\", label=\"Empirical\")\n",
     "x = np.linspace(min(Q_vals), max(Q_vals), 400)\n",
     "y = eq14_pdf(x, theta_hat)\n",
-    "plt.plot(x, y, label=f\"Eq.(14) fit (θ={theta_hat:.2f})\", linewidth=2)\n",
+    "plt.plot(x, y, label=f\"Eq.(14) fit (\u03b8={theta_hat:.2f})\", linewidth=2)\n",
     "plt.xlabel(\"Entropy production Q\")\n",
     "plt.ylabel(\"Probability density\")\n",
     "plt.title(\"Distribution of Q with Eq.(14) fit\")\n",
@@ -270,7 +270,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T/tau = 0.12 ± 0.02\n"
+      "T/tau = 0.12 \u00b1 0.02\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
     "plt.hist(Q_long, bins='auto', density=True, alpha=0.5, edgecolor=\"black\", label=\"Empirical\")\n",
     "\n",
     "x = np.linspace(0.001, max(Q_long), 400)\n",
-    "plt.plot(x, eq14_pdf(x, theta), label=f\"Eq.(14) fit (θ={theta:.2f})\", linewidth=2)\n",
+    "plt.plot(x, eq14_pdf(x, theta), label=f\"Eq.(14) fit (\u03b8={theta:.2f})\", linewidth=2)\n",
     "plt.xlabel(\"Entropy production Q\")\n",
     "plt.ylabel(\"Probability density\")\n",
     "plt.title(f\"Long-time distribution of Q (Number of trajectories={N_trajectories})\")\n",
@@ -337,10 +337,10 @@
     "# Plot data and fit\n",
     "plt.figure(figsize=(7,5))\n",
     "plt.scatter(thetas, mean_Q, label=\"Simulation data\", color=\"blue\")\n",
-    "plt.plot(thetas, fit_line, label=f\"Fit: Q = {m:.2f} θ + {b:.2f}\", color=\"red\")\n",
+    "plt.plot(thetas, fit_line, label=f\"Fit: Q = {m:.2f} \u03b8 + {b:.2f}\", color=\"red\")\n",
     "plt.xlabel(r\"$\\theta = T/\\tau$\")\n",
     "plt.ylabel(r\"$\\langle Q \\rangle$\")\n",
-    "plt.title(\"Linear fit of ⟨Q⟩ vs θ\")\n",
+    "plt.title(\"Linear fit of \u27e8Q\u27e9 vs \u03b8\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()\n"
