--- a/sse_qubit.ipynb
+++ b/sse_qubit.ipynb
@@ -5,8 +5,8 @@
    "id": "bd96e3d1",
    "metadata": {},
    "source": [
-    "# 1‑Qubit SSE: Continuous σ_z Measurement\n",
-    "This notebook reproduces single‑qubit trajectories using a Stochastic Schrödinger Equation (SSE) with symmetric midpoint evaluation for the observable‐weighted increment of an additive functional $Q$. You can tweak `gamma`, `T`, `N`, and the initial state."
+    "# 1\u2011Qubit SSE: Continuous \u03c3_z Measurement\n",
+    "This notebook reproduces single\u2011qubit trajectories using a Stochastic Schr\u00f6dinger Equation (SSE) with symmetric midpoint evaluation for the observable\u2010weighted increment of an additive functional $Q$. You can tweak `gamma`, `T`, `N`, and the initial state."
    ]
   },
   {
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
-    "from ssepkg import run_trajectory, run_ensemble, map_epsilon_to_gamma\n"
+    "from quantum_measurements.sse_qubit import run_trajectory, run_ensemble, map_epsilon_to_gamma\n"
    ]
   },
   {
@@ -49,8 +49,8 @@
     "plt.figure()\n",
     "plt.plot(out['t'], out['m'])\n",
     "plt.xlabel('t')\n",
-    "plt.ylabel('<σ_z>')\n",
-    "plt.title('Single‑trajectory magnetization')\n",
+    "plt.ylabel('<\u03c3_z>')\n",
+    "plt.title('Single\u2011trajectory magnetization')\n",
     "plt.show()"
    ]
   },
@@ -84,7 +84,7 @@
     "plt.figure()\n",
     "for k in range(min(10, ms.shape[0])):\n",
     "    plt.plot(np.linspace(0, T, ms.shape[1]), ms[k], alpha=0.7)\n",
-    "plt.xlabel('t'); plt.ylabel('<σ_z>'); plt.title('Sample trajectories')\n",
+    "plt.xlabel('t'); plt.ylabel('<\u03c3_z>'); plt.title('Sample trajectories')\n",
     "plt.savefig(resdir/'sample_trajectories.png', dpi=150, bbox_inches='tight')\n",
     "plt.close()\n",
     "# Q histogram\n",
